--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Carlos Espinal",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
